<resources>
    <string name="app_name">FETCH Pro</string>

    <string name="splashText_bold">Fetch</string>
    <string name="splashText">Pro</string>
    <string name="header">FETCHPro</string>

    <string name="fast_deliver">Fast Delivery</string>

    <string name="fast_deliverText">
        Tempor aliquip ea culpa magna ullamco esse mollit ex fugiat elit.
    </string>
    <string name="btnOnboarding_next">next</string>
    <string name="skipText_onboarding">SKIP</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your">Enter your details to log in</string>
    <string name="hint_email">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="forgot_pass_header">Forgot Password</string>
    <string name="reset_pass_header">Reset Password</string>
    <string name="log_in">Log in</string>
    <string name="new_user">New User? </string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="retrieve">RETRIEVE</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_password2">Re-enter New Password</string>
    <string name="create_account">Create Account</string>
    <string name="hint_enter_phone">Enter Phone Number</string>
    <string name="already_have">Already have an account? </string>
    <string name="input_mail_error">Please enter an email</string>
    <string name="input_mail_validation">please enter a valid email</string>
    <string name="input_number_Validation">Please enter a valid phone Number </string>
    <string name="sign_up_with">SIGN UP WITH GOOGLE</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="view_profile_nav">View Profile</string>
    <string name="search_hint">What are you looking for...</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="login_to_continue_or_press_sign_up_to_create_an_account">Login to continue or press Sign Up to create an account.</string>


</resources>
