<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_header_gradient"
    android:orientation="vertical">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/nav_profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_round"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/nav_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/navTitle" />

    <Button
        android:id="@+id/nav_view_profile"
        android:layout_width="117dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/btn_background_dark"
        android:text="@string/view_profile_nav"
        android:textAppearance="@style/btnDesignLight" />


</LinearLayout>