<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fetchpro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="247dp"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:text="@string/splashText_bold"
        android:textAppearance="@style/fetchpro_headerDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="259dp"
        android:layout_height="200dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="63dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetchpro"
        app:srcCompat="@drawable/fastdelivery" />

    <TextView
        android:id="@+id/onboarding_textMain"
        android:layout_width="147dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|top"
        android:text="@string/fast_deliver"
        android:textAppearance="@style/onboarding_textMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tempor_aliq"
        android:layout_width="262dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|top"
        android:text="@string/fast_deliverText"
        android:textAppearance="@style/onboarding_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_textMain" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_background_dark"
        android:elevation="30dp"
        android:text="@string/btnOnboarding_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempor_aliq" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/skipText_onboarding"
        android:textColor="@color/colorTextMinor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/poppins"
        android:text="@string/splashText"
        android:textAppearance="@style/fetchpro_headerDark"
        app:layout_constraintStart_toEndOf="@+id/fetchpro"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>