<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding"
    tools:context=".ForgotPassword">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="425dp"
        android:layout_height="215dp"
        android:background="@drawable/ic_path_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/poppins"
        android:text="@string/splashText_bold"
        android:textAppearance="@style/fetchpro_headerLight"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/poppins"
        android:text="@string/splashText"
        android:textAppearance="@style/fetchpro_headerLight"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_pass_header"
        android:textAppearance="@style/header_textMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        app:hintTextAppearance="@style/hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:backgroundTint="@color/colorTextMinor"
            android:drawableStart="@drawable/ic_mail_dark"
            android:drawablePadding="15dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBtnFill"
            android:textColorHint="@color/colorTextMinor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/retrieve"
        android:layout_width="147dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_background_dark"
        android:elevation="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/retrieve"
        android:textAppearance="@style/btnDesignLight"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail3" />

</androidx.constraintlayout.widget.ConstraintLayout>